--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">
 </head>
 
 <body>
-    <button id='inicioSesion'>Iniciar sesion con google</button>
+    <div id="seccionSesion" >
+            <button id='inicioSesion'>Iniciar sesion con google</button>
+    </div>
+    
     <div id='seccion'>
 
     </div>
+
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
